//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk, unique]
  name String [not null]
  email String [unique, not null]
  emailVerified DateTime
  password_hash String
  image String [not null]
  role_id String
  verified_symbol_id String
  verified_equations_id String
  submitted_equations Equation [not null]
  submitted_symbols Symbol [not null]
  equations_updated Equation [not null]
  symbols_updated Symbol [not null]
  accounts Account [not null]
  sessions Session [not null]
  topics_updated Topic [not null]
  staff_of_topic StaffOnTopic [not null]
  verified_equations StaffOnVerifiedEquation [not null]
  verified_symbols StaffOnVerifiedSymbol [not null]
  role Role
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Role {
  id String [pk]
  name String [not null]
  members User [not null]
}

Table Equation {
  id String [pk]
  latex String [not null]
  submitter_id String [not null]
  updater_id String [not null]
  verification_id String [unique]
  status submission_status [not null]
  topics TopicToEquation [not null]
  symbols SymbolInEquation [not null]
  submitted_by User [not null]
  updated_by User [not null]
  verification VerifiedEquation
}

Table Symbol {
  id String [pk]
  submitter_id String [not null]
  updater_id String [not null]
  latex String [not null]
  verification_id String
  status submission_status [not null]
  symbol_type symbol_type [not null]
  used_in SymbolInEquation [not null]
  topics SymbolInTopic [not null]
  submitted_by User [not null]
  updated_by User [not null]
  verification VerifiedSymbol
}

Table Topic {
  id String [pk]
  name String [not null]
  updater_id String [not null]
  updated_by User [not null]
  parents_id String
  parents Topic [not null]
  topic Topic
  equations TopicToEquation [not null]
  symbol SymbolInTopic [not null]
  staff StaffOnTopic [not null]
}

Table VerifiedEquation {
  id String [pk]
  verifiers StaffOnVerifiedEquation [not null]
  equation_id Equation
}

Table VerifiedSymbol {
  id String [pk]
  verified_by StaffOnVerifiedSymbol [not null]
  symbol_id String [unique, not null]
  symbol Symbol [not null]
}

Table TopicToEquation {
  topic_id String [not null]
  equation_id String [not null]
  topic Topic [not null]
  equation Equation [not null]

  indexes {
    (equation_id, topic_id) [pk]
  }
}

Table SymbolInTopic {
  topic_id String [not null]
  symbol_id String [not null]
  topic Topic [not null]
  symbol Symbol [not null]

  indexes {
    (symbol_id, topic_id) [pk]
  }
}

Table SymbolInEquation {
  symbol_id String [not null]
  equation_id String [not null]
  symbol Symbol [not null]
  equation Equation [not null]

  indexes {
    (equation_id, symbol_id) [pk]
  }
}

Table StaffOnTopic {
  staff_id String [not null]
  topic_id String [not null]
  staff User [not null]
  topic Topic [not null]

  indexes {
    (staff_id, topic_id) [pk]
  }
}

Table StaffOnVerifiedEquation {
  staff_id String [not null]
  verified_equation_id String [not null]
  staff User [not null]
  verified_equation VerifiedEquation [not null]

  indexes {
    (staff_id, verified_equation_id) [pk]
  }
}

Table StaffOnVerifiedSymbol {
  staff_id String [not null]
  verified_symbol_id String [not null]
  staff User [not null]
  verified_symbol VerifiedSymbol [not null]

  indexes {
    (staff_id, verified_symbol_id) [pk]
  }
}

Enum submission_status {
  created
  verifying
  active
  deactivated
}

Enum symbol_type {
  variable
  constant
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: User.role_id > Role.id

Ref: Equation.submitter_id > User.id [delete: Set Null]

Ref: Equation.updater_id > User.id [delete: Set Null]

Ref: Equation.verification_id - VerifiedEquation.id [delete: Cascade]

Ref: Symbol.submitter_id > User.id [delete: No Action]

Ref: Symbol.updater_id > User.id [delete: No Action]

Ref: Topic.updater_id > User.id

Ref: Topic.parents_id > Topic.id

Ref: VerifiedSymbol.symbol_id - Symbol.id

Ref: TopicToEquation.topic_id > Topic.id

Ref: TopicToEquation.equation_id > Equation.id

Ref: SymbolInTopic.topic_id > Topic.id

Ref: SymbolInTopic.symbol_id > Symbol.id

Ref: SymbolInEquation.symbol_id > Symbol.id

Ref: SymbolInEquation.equation_id > Equation.id

Ref: StaffOnTopic.staff_id > User.id

Ref: StaffOnTopic.topic_id > Topic.id

Ref: StaffOnVerifiedEquation.staff_id > User.id

Ref: StaffOnVerifiedEquation.verified_equation_id > VerifiedEquation.id

Ref: StaffOnVerifiedSymbol.staff_id > User.id

Ref: StaffOnVerifiedSymbol.verified_symbol_id > VerifiedSymbol.id